[gd_scene load_steps=7 format=2]

[ext_resource path="res://input/joy_calibration/Stick.gd" type="Script" id=1]
[ext_resource path="res://input/joy_calibration/axis_disabled_sbox.tres" type="StyleBox" id=2]
[ext_resource path="res://input/joy_calibration/axis_enabled_sbox.tres" type="StyleBox" id=3]

[sub_resource type="StyleBoxFlat" id=1]

bg_color = Color( 0.866667, 0.866667, 0.866667, 0.917647 )
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=2]

bg_color = Color( 0.164706, 0.160784, 0.160784, 1 )
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500
corner_detail = 16
shadow_size = 4

[sub_resource type="StyleBoxFlat" id=3]

bg_color = Color( 0.733333, 0.807843, 0.745098, 1 )

[node name="Stick" type="Panel"]
margin_top = 1.0
margin_right = 250.0
margin_bottom = 251.0
rect_min_size = Vector2( 250, 250 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Vert" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.0
margin_top = 10.0
margin_bottom = -10.0
rect_min_size = Vector2( 10, 0 )
custom_styles/panel = ExtResource( 2 )

[node name="Hori" type="Panel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -5.0
margin_right = -10.0
rect_min_size = Vector2( 0, 10 )
custom_styles/panel = ExtResource( 3 )

[node name="Nod" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[connection signal="gui_input" from="." to="." method="_on_Stick_bg_gui_input"]
[connection signal="gui_input" from="Vert" to="." method="_on_Vert_gui_input"]
[connection signal="gui_input" from="Hori" to="." method="_on_Hori_gui_input"]
